...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_service_list_services"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layoutAnimation="@anim/layout_animation_from_bottom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
